# ManagedCorProfiler

./: .gitignore  LICENSE.md  ManagedCorProfiler.sln  README.md  bindgen_cor.ps1  bindgen_corhdr.ps1  bindgen_corprof.ps1
.circleci/: config.yml
ClrProfiling.Backend.Common/: ClrProfiling.Backend.Common.csproj  GlobalUsings.cs
ClrProfiling.Backend.Windows/: ClrProfiling.Backend.Windows.csproj  GlobalSuppressions.cs  GlobalUsings.cs  NativeMethods.json  NativeMethods.txt  ThreadManager.Windows64.cs
ClrProfiling.Core/: ClrProfiling.Core.csproj  NativeMethods.json  NativeMethods.txt  ProfilerCallbackAttribute.cs
ClrProfiling.Generator/: ClrProfiling.Generator.csproj  DllEntryPointExports.sbncs  Generator.cs  Helpers.cs
ClrProfiling.Hooks/: ClrProfiling.Hooks.csproj  EnterLeaveFunctionHooks3WithInfo.cs  NativeMethods.cs
ClrProfiling.Hooks/hooks/: CMakeLists.txt  build.cmd  hooks.asm  hooks.cpp  hooks.def  hooks_shared.cpp
ClrProfiling.Runner/: ClrProfiling.Runner.csproj  CorerunProfilerRunner.cs  DotnetProfilerRunner.cs  IProfilerRunner.cs  ProfileeOptions.cs  ProfilerRunnerBase.cs
Cor.Bindings/: ASSEMBLYMETADATA.cs  COR_NATIVE_LINK.cs  Cor.Bindings.csproj  CorConsts.cs  CorNativeLinkFlags.cs  CorNativeLinkType.cs  CorValidatorModuleType.cs  IHostFilter.cs  IMapToken.cs  IMetaDataAssemblyEmit.cs  IMetaDataAssemblyImport.cs  IMetaDataDispenser.cs  IMetaDataDispenserEx.cs  IMetaDataEmit.cs  IMetaDataEmit2.cs  IMetaDataError.cs  IMetaDataFilter.cs  IMetaDataImport.cs  IMetaDataImport2.cs  IMetaDataInfo.cs  IMetaDataTables.cs  IMetaDataTables2.cs  OSINFO.cs  (+1 more)
(+382 files in other folders)
